Fix: Particels Baxkground Flickering

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -3,6 +3,9 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+    background-color: black;
+}
 
 @layer utilities {
 
